lisataan codecov gradleen

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,3 +26,7 @@ jobs:
           key: v1-dependencies-
 
       - run: gradle test
+
+      - run: ./gradlew check
+      - run: ./gradlew jacocoTestReport
+      - run: bash <(curl -s https://codecov.io/bash)
