--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'java'
 apply plugin: 'application'
 
 // Apply the test coverage plugin
-apply plugin: "jacoco"
+apply plugin: 'jacoco'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -37,5 +37,13 @@ mainClassName = 'ohtu.ohtuvarasto.Main'
 jar {
     manifest {
         attributes 'Main-Class': 'ohtu.ohtuvarasto.Main'
+    }
+}
+
+// Generating reports
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled true
     }
 }
