--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,6 @@ jobs:
 
       - run: gradle test
 
-      - run: ./gradlew check
-      - run: ./gradlew jacocoTestReport
+      - run: gradle check
+      - run: gradle jacocoTestReport
       - run: bash <(curl -s https://codecov.io/bash)
