korjataan taas gradlle buildia

--- a/build.gradle
+++ b/build.gradle
@@ -37,8 +37,7 @@ mainClassName = 'main.Main'
 jar {
     manifest {
         attributes ('Main-Class': 'main.Main',
-        classDirectories = files(classDirectories.files.collect {
-            fileTree(dir: it)
+        "Class-Path": configurations.compile.collect { it.getName() }.join(' '))
         })
         )
     }
