--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,9 @@ jar {
     manifest {
         attributes ('Main-Class': 'main.Main')
         }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
     }
 
 // Generating reports
