--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ jar {
         attributes ('Main-Class': 'main.Main')
         }
     from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+        configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
     }
 
@@ -51,10 +51,11 @@ jacocoTestReport {
         xml.enabled true
         html.enabled true
     }
-    //afterEvaluate {
-    //    classDirectories = files(classDirectories.files.collect {
-    //        fileTree(dir: it,
-    //                exclude: ['main/**'])
-    //    })
-    //}
+    afterEvaluate {
+        getClassDirectories().from(classDirectories.files.collect {
+            fileTree(dir: it,
+                    exclude: ['main/**'])
+            })
+    }
+
 }
