properly removing the main from the jacoco reports

--- a/build.gradle
+++ b/build.gradle
@@ -51,11 +51,11 @@ jacocoTestReport {
         xml.enabled true
         html.enabled true
     }
-    afterEvaluate {
-        getClassDirectories().from(classDirectories.files.collect {
+    afterEvaluate {       
+        classDirectories.setFrom(files(classDirectories.files.collect {
             fileTree(dir: it,
                     exclude: ['main/**'])
-            })
+            }))
     }
 
 }
