korjataan codeclimate yml

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -2,6 +2,6 @@ plugins:
   checkstyle:
     enabled: true
     config:
-      file: "config/checkstyle.xml"
+      file: "config/checkstyle/checkstyle.xml"
       
       
